# ros2-lab1

./: README.md
install/atp221_assignment/lib/atp221_assignment/: publisher_node  subscriber_node
install/atp221_assignment/share/atp221_assignment/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/atp221_assignment/: package.xml  setup.cfg  setup.py
