<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelocation="http://download.ros.org/schema/package_format3.xsd package_format3.xsd"?>
<package format="3">
  <name>atp221_assignment</name>
  <version>0.0.0</version>
  <description>ATP-221 assignment package for Vladislav Mikhaylyuck</description>
  <maintainer email="balanaraus@gmail.com">Vladislav</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
